--- a/spring-cloud-ribbon/build.gradle
+++ b/spring-cloud-ribbon/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-ribbon')
     compile('org.springframework.cloud:spring-cloud-starter-hystrix')
     compile('org.springframework.cloud:spring-cloud-starter-hystrix-dashboard')
+    compile('org.springframework.boot:spring-boot-starter-actuator')
 }
 
 dependencyManagement {
