update Readme.docx and refactor build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -47,5 +47,11 @@ subprojects {
         testCompile 'junit:junit:4.12'
         testCompile('org.springframework.boot:spring-boot-starter-test')
     }
+
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:Dalston.RELEASE"
+        }
+    }
 }
 
