--- a/spring-cloud-feign/build.gradle
+++ b/spring-cloud-feign/build.gradle
@@ -4,4 +4,5 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-eureka')
 	compile('org.springframework.cloud:spring-cloud-starter-feign')
 	compile('org.springframework.cloud:spring-cloud-starter-hystrix-dashboard')
+	compile('org.springframework.boot:spring-boot-starter-actuator')
 }
